<?xml version="1.0"?>
<package format="3">
  <name>ros2_common_utilities</name>
  <version>0.0.0</version>
  <description>Roboy common utilities and headers</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD-3</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen3</build_depend>

  <depend>rclcpp</depend>
  <depend>roboy_middleware_msgs</depend>
  <depend>std_msgs</depend> 


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>